force-app/main/default/objects/Exception_Log__c/fields/Error_Date__c.field-meta.xml
<CustomField>
    <fullName>Error_Date__c</fullName>
    <label>Error Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>