force-app/main/default/objects/Exception_Log__c/fields/Exception_Line_Numer__c.field-meta.xml
<CustomField>
    <fullName>Exception_Line_Numer__c</fullName>
    <label>Exception Line Numer</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>