force-app/main/default/objects/Exception_Log__c/fields/Governor_Limit_Used__c.field-meta.xml
<CustomField>
    <fullName>Governor_Limit_Used__c</fullName>
    <label>Governor Limit Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>