force-app/main/default/objects/Exception_Log__c/fields/Is_API_Exception__c.field-meta.xml
<CustomField>
    <fullName>Is_API_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is API Exception</label>
    <type>Checkbox</type>
</CustomField>