force-app/main/default/objects/Exception_Log__c/fields/More_Detail__c.field-meta.xml
<CustomField>
    <fullName>More_Detail__c</fullName>
    <label>More Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>