force-app/main/default/objects/Exception_Log__c/fields/WB_Chat__c.field-meta.xml
<CustomField>
    <fullName>WB_Chat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WB Chat</label>
    <referenceTo>Chat__c</referenceTo>
    <relationshipLabel>WB Exception Logs</relationshipLabel>
    <relationshipName>WB_Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>