force-app/main/default/objects/Exception_Log__c/fields/Whole_Exception__c.field-meta.xml
<CustomField>
    <fullName>Whole_Exception__c</fullName>
    <label>Whole Exception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>